name: blast-it-with-piss
synopsis: Flooder for pseudo-anonymous bydloforum 2ch.so
description: Flooder for pseudo-anonymous bydloforum 2ch.so, includes GTK2 gui and auto-updater.
version: 1.1.8
homepage: https://github.com/exbb2/BlastItWithPiss
bug-reports: https://github.com/exbb2/BlastItWithPiss/issues
license: GPL-3
license-file: LICENSE
author: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
maintainer: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
category: Network
stability: experimental
build-type: Simple
cabal-version: >= 1.15
tested-with: GHC == 7.4.1
data-files: build-production.sh
           ,resources/blast.glade
           ,resources/2ch.so.png
           ,resources/mocha
           ,resources/analniy-sadism
           ,resources/nihuya
           ,resources/agitka.png
           ,images/jew-swede.jpg
           ,images/sad-monkey.jpg
           ,images/newscreen.png
           ,README.md
           ,COMPILEGUIDE.md

source-repository head
    type: git
    location: git://github.com/exbb2/BlastItWithPiss.git

flag library
    description: Build library
    default: False

flag gtkonly
    description: Build only gtkblast binary
    default: False

flag bindist
    description: Set executable's directory as the current working directory.
    default: False

flag test
    description: Build DEBUG version, otherwise build release.
    default: False

library
    build-depends: base
                  ,lifted-base
                  ,stm >= 2.4
                  ,data-default
                  ,random
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,monad-control
                  ,transformers
                  ,network
                  ,http-conduit >= 1.8.6
                  ,http-conduit-browser >= 1.7.1.2
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types
                  ,socks
                  ,resourcet
                  ,case-insensitive
                  ,deepseq
                  ,failure
                  ,tagsoup
                  ,fast-tagsoup

    exposed-modules:
                   BlastItWithPiss
                  ,BlastItWithPiss.Blast
                  ,BlastItWithPiss.Post
                  ,BlastItWithPiss.Parsing
                  ,BlastItWithPiss.Escaping
                  ,BlastItWithPiss.MultipartFormData
                  ,BlastItWithPiss.Image
                  ,BlastItWithPiss.Board
                  ,BlastItWithPiss.Choice
                  ,BlastItWithPiss.MonadChoice

    other-modules: Import

    if flag(library) && !flag(gtkonly)
        buildable: True
    else
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,BangPatterns
               ,ConstraintKinds

executable gtkblast
    main-is: GtkMain.hs

    other-modules: Import

                  ,GtkBlast.Achievement
                  ,GtkBlast.Conf
                  ,GtkBlast.Directory
                  ,GtkBlast.Environment
                  ,GtkBlast.EnvPart
                  ,GtkBlast.EnvParts
                  ,GtkBlast.GtkUtils
                  ,GtkBlast.Captcha
                  ,GtkBlast.AntigateCaptcha
                  ,GtkBlast.GuiCaptcha
                  ,GtkBlast.Image
                  ,GtkBlast.IO
                  ,GtkBlast.Log
                  ,GtkBlast.Mainloop
                  ,GtkBlast.MuVar
                  ,GtkBlast.Pasta
                  ,GtkBlast.Proxy
                  ,GtkBlast.ROW_ROW_FIGHT_THE_POWER
                  ,GtkBlast.Type_CaptchaMode
                  ,GtkBlast.Type_PastaSet
                  ,GtkBlast.BoardSettingsGuiXML
                  ,Paths_blast_it_with_piss
    
    build-depends: base
                  ,antigate >= 0.2.0
                  ,filepath
                  ,directory
                  ,containers
                  ,temporary
                  ,time
                  ,old-time
                  ,stm >= 2.4
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,utf8-string
                  ,text
                  ,gtk
                  ,glib
                  ,network
                  ,deepseq
                  ,failure
                  ,data-default
                  ,aeson
                  ,aeson-pretty
                  ,ghc-prim
                  ,random-shuffle

                  ,lifted-base
                  ,stm >= 2.4
                  ,data-default
                  ,random
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,monad-control
                  ,transformers
                  ,network
                  ,http-conduit >= 1.8.6
                  ,http-conduit-browser >= 1.7.1.2
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types
                  ,socks
                  ,resourcet
                  ,case-insensitive
                  ,deepseq
                  ,failure
                  ,tagsoup
                  ,fast-tagsoup

    if flag(bindist)
        cpp-options: -DBINDIST
        build-depends: executable-path
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                UndecidableInstances
               ,FlexibleInstances

executable proxychecker
    main-is: CheckProxyMain.hs

    other-modules: Import
    
    build-depends: base
                  ,cmdargs
                  ,network

                  ,time
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,utf8-string
                  ,text
                  ,safe
                  ,deepseq
                  ,failure
                  ,data-default

                  ,lifted-base
                  ,stm >= 2.4
                  ,data-default
                  ,random
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,monad-control
                  ,transformers
                  ,network
                  ,http-conduit >= 1.8.6
                  ,http-conduit-browser >= 1.7.1.2
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types
                  ,socks
                  ,resourcet
                  ,case-insensitive
                  ,deepseq
                  ,failure
                  ,tagsoup
                  ,fast-tagsoup

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                ExistentialQuantification
               ,MultiParamTypeClasses
               ,FunctionalDependencies
               ,FlexibleInstances
               ,TypeSynonymInstances

executable smyvalka
    main-is: SmyvalkaMain.hs

    other-modules: Import
    
    build-depends: base
                  ,cmdargs
                  ,network

                  ,time
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,utf8-string
                  ,text
                  ,safe
                  ,deepseq
                  ,failure
                  ,data-default

                  ,lifted-base
                  ,stm >= 2.4
                  ,data-default
                  ,random
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,monad-control
                  ,transformers
                  ,network
                  ,http-conduit >= 1.8.6
                  ,http-conduit-browser >= 1.7.1.2
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types
                  ,socks
                  ,resourcet
                  ,case-insensitive
                  ,deepseq
                  ,failure
                  ,tagsoup
                  ,fast-tagsoup
                  ,random-shuffle
                  ,antigate

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                ExistentialQuantification
               ,MultiParamTypeClasses
               ,FunctionalDependencies
               ,FlexibleInstances
               ,TypeSynonymInstances

--~executable cliblast
--~    main-is: CliMain.hs
--~    build-depends: base
--~                  ,process
--~                  ,network
--~                  ,stm
--~                  ,bytestring
--~                  ,blast-it-with-piss
--~
--~    if flag(gtkonly)
--~        buildable: False
--~
--~    if flag(bindist)
--~        cpp-options: -DBINDIST
--~        build-depends: executable-path
--~
--~    ghc-options: -Wall -threaded 
--~
--~    default-language: Haskell2010
--~
--~    default-extensions:
--~                NoImplicitPrelude
--~               ,CPP
--~               ,PatternGuards
--~               ,OverloadedStrings
--~               ,RecordWildCards
--~               ,ScopedTypeVariables
--~               ,PackageImports
--~               ,BangPatterns

-- updater app. Checks and installs updates, then runs gtkblast
executable BlastItWithPiss
    main-is: UpdaterMain.hs

    other-modules: Import

                  ,Updater.Manifest
                  ,Updater.UnpackZip
                  ,Updater.Repair
                  ,Updater.DownloadWithMD5
                  ,Updater.GuiXML

    build-depends: ghc-prim
                  ,base
                  ,lifted-base
                  ,safe
                  ,process
                  ,gtk
                  ,directory
                  ,filepath
                  ,deepseq
                  ,failure
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,transformers
                  ,monad-control
                  ,data-default
                  ,executable-path
                  ,network
                  ,http-conduit
                  ,zip-archive
                  ,aeson
                  ,cryptohash
                  ,crypto-api
                  ,cereal
                  --,tls-extra == 0.4.7.1
                  ,executable-path
    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,BangPatterns
               ,ConstraintKinds
