name: blast-it-with-piss
synopsis: Flooder for pseudo-anonymous bydloforum 2ch.hk
description: Flooder for pseudo-anonymous bydloforum 2ch.hk, includes GTK2 gui and auto-updater.
version: 1.1.13
homepage: https://github.com/exbb2/BlastItWithPiss
bug-reports: https://github.com/exbb2/BlastItWithPiss/issues
license: GPL-3
license-file: LICENSE
author: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
maintainer: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
category: Network
stability: experimental
build-type: Simple
cabal-version: >= 1.15
tested-with: GHC == 7.4.1
data-files:
    build-production.bash
   ,README.md
   ,COMPILEGUIDE.md
   ,resources/blast.glade
   ,resources/2ch.so.png
   ,resources/agitka.png
   ,images/jew-swede.jpg
   ,images/sad-monkey.jpg
   ,images/newscreen.png
   ,pasta/mocha
   ,pasta/shizik
   ,pasta/analniy-sadism
   ,pasta/nihuya

source-repository head
    type: git
    location: git://github.com/exbb2/BlastItWithPiss.git

flag library
    description: Build library
    default: False

flag gtkonly
    description: Build only gtkblast binary
    default: False

flag bindist
    description: Set executable's directory as the current working directory.
    default: False

flag test
    description: Build DEBUG version, otherwise build release.
    default: False

library
    build-depends: base >= 4.6 && < 5
                  ,lifted-base
                  ,stm >= 2.4
                  ,data-default
                  ,random
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,monad-control
                  ,transformers
                  ,network
                  ,http-conduit >= 1.9.0
                  ,http-conduit-browser >= 1.8
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types >= 0.1.0.2
                  ,socks
                  ,resourcet
                  ,case-insensitive >= 1 && < 2
                  ,deepseq
                  ,failure
                  ,tagsoup
                  ,fast-tagsoup-utf8-only >= 1.0.4
                  ,antigate >= 0.4 && < 0.5

    exposed-modules:
                   BlastItWithPiss
                  ,BlastItWithPiss.Blast
                  ,BlastItWithPiss.Post
                  ,BlastItWithPiss.Captcha
                  ,BlastItWithPiss.Parsing
                  ,BlastItWithPiss.Escaping
                  ,BlastItWithPiss.Image
                  ,BlastItWithPiss.Board
                  ,BlastItWithPiss.Choice
                  ,BlastItWithPiss.MonadChoice

    other-modules: Import

    if flag(library) && !flag(gtkonly)
        buildable: True
    else
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,BangPatterns
               ,ConstraintKinds

executable gtkblast
    main-is: GtkMain.hs

    other-modules: Import

                  ,GtkBlast.Achievement
                  ,GtkBlast.Conf
                  ,GtkBlast.Directory
                  ,GtkBlast.Environment
                  ,GtkBlast.EnvPart
                  ,GtkBlast.EnvParts
                  ,GtkBlast.GtkUtils
                  ,GtkBlast.Captcha
                  ,GtkBlast.AntigateCaptcha
                  ,GtkBlast.GuiCaptcha
                  ,GtkBlast.Image
                  ,GtkBlast.IO
                  ,GtkBlast.Log
                  ,GtkBlast.Mainloop
                  ,GtkBlast.MuVar
                  ,GtkBlast.Pasta
                  ,GtkBlast.Proxy
                  ,GtkBlast.ROW_ROW_FIGHT_THE_POWER
                  ,GtkBlast.Type_CaptchaMode
                  ,GtkBlast.Type_PastaSet
                  ,GtkBlast.BoardSettingsGuiXML
                  ,Paths_blast_it_with_piss
    
    build-depends: base >= 4.6 && < 5
                  ,antigate >= 0.4 && < 0.5
                  ,filepath
                  ,directory
                  ,containers
                  ,temporary
                  ,time
                  ,old-time
                  ,stm >= 2.4
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,text
                  ,gtk
                  ,glib
                  ,network
                  ,deepseq
                  ,failure
                  ,data-default
                  ,aeson
                  ,aeson-pretty
                  ,ghc-prim
                  ,random-shuffle
                  ,random
                  ,safe
                  ,filepath
                  ,MonadRandom
                  ,http-conduit >= 1.9.0
                  ,http-conduit-browser >= 1.8
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types >= 0.1.0.2
                  ,socks
                  ,resourcet
                  ,case-insensitive >= 1 && < 2
                  ,tagsoup
                  ,fast-tagsoup-utf8-only >= 1.0.4

    if flag(bindist)
        cpp-options: -DBINDIST
        build-depends: executable-path
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                UndecidableInstances
               ,FlexibleInstances

executable proxychecker
    main-is: CheckProxyMain.hs

    other-modules: Import
    
    build-depends: base >= 4.6 && < 5
                  ,cmdargs
                  ,network
                  ,time
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,text
                  ,safe
                  ,deepseq
                  ,failure
                  ,data-default
                  ,stm >= 2.4
                  ,random
                  ,containers
                  ,filepath
                  ,MonadRandom
                  ,http-conduit >= 1.9.0
                  ,http-conduit-browser >= 1.8
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types >= 0.1.0.2
                  ,socks
                  ,resourcet
                  ,case-insensitive >= 1 && < 2
                  ,tagsoup
                  ,fast-tagsoup-utf8-only >= 1.0.4
                  ,antigate >= 0.4 && < 0.5

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                ExistentialQuantification
               ,MultiParamTypeClasses
               ,FunctionalDependencies
               ,FlexibleInstances
               ,TypeSynonymInstances

executable smyvalka
    main-is: SmyvalkaMain.hs

    other-modules: Import
    
    build-depends: base >= 4.6 && < 5
                  ,cmdargs
                  ,network
                  ,time
                  ,transformers
                  ,monad-control
                  ,lifted-base
                  ,bytestring
                  ,text
                  ,safe
                  ,deepseq
                  ,failure
                  ,data-default
                  ,stm >= 2.4
                  ,random
                  ,containers
                  ,filepath
                  ,MonadRandom
                  ,http-conduit >= 1.9.0
                  ,http-conduit-browser >= 1.8
                  ,certificate >= 1.3.1
                  ,conduit
                  ,http-types
                  ,mime-types >= 0.1.0.2
                  ,socks
                  ,resourcet
                  ,case-insensitive >= 1 && < 2
                  ,tagsoup
                  ,fast-tagsoup-utf8-only >= 1.0.4
                  ,random-shuffle
                  ,antigate >= 0.4 && < 0.5

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,PackageImports
               ,BangPatterns
               ,ConstraintKinds

    other-extensions:
                ExistentialQuantification
               ,MultiParamTypeClasses
               ,FunctionalDependencies
               ,FlexibleInstances
               ,TypeSynonymInstances

--~executable cliblast
--~    main-is: CliMain.hs
--~    build-depends: base >= 4.6 && < 5
--~                  ,process
--~                  ,network
--~                  ,stm
--~                  ,bytestring
--~                  ,blast-it-with-piss
--~
--~    if flag(gtkonly)
--~        buildable: False
--~
--~    if flag(bindist)
--~        cpp-options: -DBINDIST
--~        build-depends: executable-path
--~
--~    ghc-options: -Wall -threaded 
--~
--~    default-language: Haskell2010
--~
--~    default-extensions:
--~                NoImplicitPrelude
--~               ,CPP
--~               ,PatternGuards
--~               ,OverloadedStrings
--~               ,RecordWildCards
--~               ,ScopedTypeVariables
--~               ,PackageImports
--~               ,BangPatterns

-- updater app. Checks and installs updates, then runs gtkblast
executable BlastItWithPiss
    main-is: UpdaterMain.hs

    other-modules: Import

                  ,Updater.Manifest
                  ,Updater.UnpackZip
                  ,Updater.Repair
                  ,Updater.DownloadWithMD5
                  ,Updater.GuiXML

    build-depends: ghc-prim
                  ,base
                  ,lifted-base
                  ,safe
                  ,process
                  ,gtk
                  ,directory
                  ,filepath
                  ,deepseq
                  ,failure
                  ,containers
                  ,time
                  ,bytestring
                  ,text
                  ,transformers
                  ,monad-control
                  ,data-default
                  ,executable-path
                  ,network
                  ,http-conduit
                  ,zip-archive
                  ,aeson
                  ,cryptohash
                  ,crypto-api
                  ,cereal
                  --,tls-extra == 0.4.7.1
                  ,executable-path
    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded 

    default-language: Haskell2010

    default-extensions:
                NoImplicitPrelude
               ,CPP
               ,OverloadedStrings
               ,RecordWildCards
               ,ScopedTypeVariables
               ,FlexibleContexts
               ,DeriveDataTypeable
               ,BangPatterns
               ,ConstraintKinds
