name: blast-it-with-piss
synopsis: Flooder for pseudo-anonymous bydloforum 2ch.hk
description: Flooder for pseudo-anonymous bydloforum 2ch.hk, includes GTK2 gui and auto-updater.
version: 1.1.35
homepage: https://github.com/exbb2/BlastItWithPiss
bug-reports: https://github.com/exbb2/BlastItWithPiss/issues
license: GPL-3
license-file: LICENSE
author: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
maintainer: mailto:kudahkukarek@gmail.com, xmpp:kudah@jabber.ru, https://github.com/exbb2
category: Network
stability: experimental
build-type: Simple
cabal-version: >= 1.15
-- I highly suspect it doesn't compile on 7.4.1 anymore.
tested-with: GHC == 7.6.2
data-files:
    build-production.bash
   ,README.md
   ,COMPILEGUIDE.md
   ,resources/blast.glade
   ,resources/2ch.so.png
   ,images/inach-shizik-gangnam-style.jpg
   ,images/inach-shizik-sheezbusters2.jpg
   ,images/inach-shizik-будущее-за-нами.jpg
   ,images/inach-shizik-nyan.gif
   ,images/inach-shizik-wizard2.jpg
   ,images/inach-shizik-заберите-это-обратно.jpg
   ,images/inach-shizik-petuh-running-from-police.jpg
   ,images/inach-shizik-yoba-animated.gif
   ,pasta/mocha
   ,pasta/shizik
   ,pasta/analniy-sadism
   ,pasta/nihuya
   ,video/shizik

source-repository head
    type: git
    location: git://github.com/exbb2/BlastItWithPiss.git

flag library
    description: Build library
    default: False

flag gtkonly
    description: Build only gtkblast binary
    default: False

flag bindist
    description: Set executable's directory as the current working directory.
    default: False

flag test
    description: Build DEBUG version, otherwise build release.
    default: False

flag old-directory
    description: Build with directory < 1.2
    default: False

library
    build-depends:
         base >= 4.5 && < 5
        ,lifted-base
        ,stm >= 2.4
        ,data-default
        ,random
        ,containers
        ,time
        ,bytestring
        ,text
        ,text-locale-encoding
        ,safe
        ,filepath
        ,system-filepath
        ,directory
        ,MonadRandom
        ,random-shuffle
        ,monad-control
        ,transformers
        ,network
        ,http-conduit >= 1.9.1
        ,http-conduit-browser >= 1.8.2
        ,certificate >= 1.3.1
        ,conduit
        ,http-types
        ,mime-types >= 0.1.0.2
        ,socks == 0.5.1
        ,resourcet
        ,case-insensitive >= 1 && < 2
        ,deepseq
        ,failure
        ,tagsoup
        ,fast-tagsoup-utf8-only >= 1.0.4
        ,antigate >= 0.6 && < 0.7

    exposed-modules:
         BlastItWithPiss
        ,BlastItWithPiss.Blast
        ,BlastItWithPiss.Post
        ,BlastItWithPiss.Captcha
        ,BlastItWithPiss.Parsing
        ,BlastItWithPiss.Escaping
        ,BlastItWithPiss.Image
        ,BlastItWithPiss.ImageGen
        ,BlastItWithPiss.PastaGen
        ,BlastItWithPiss.Video
        ,BlastItWithPiss.Board
        ,BlastItWithPiss.Choice
        ,BlastItWithPiss.MonadChoice
        ,BlastItWithPiss.ProxyReader

    other-modules: Import

    if flag(library) && !flag(gtkonly)
        buildable: True
    else
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    hs-source-dirs: src

    default-extensions:
         NoImplicitPrelude
        ,CPP
        ,OverloadedStrings
        ,RecordWildCards
        ,NamedFieldPuns
        ,ScopedTypeVariables
        ,FlexibleContexts
        ,DeriveDataTypeable
        ,BangPatterns
        ,ConstraintKinds

executable gtkblast
    main-is: GtkMain.hs

    other-modules:
         Import

        ,Paths_blast_it_with_piss

        ,BlastItWithPiss
        ,BlastItWithPiss.Blast
        ,BlastItWithPiss.Post
        ,BlastItWithPiss.Captcha
        ,BlastItWithPiss.Parsing
        ,BlastItWithPiss.Escaping
        ,BlastItWithPiss.Image
        ,BlastItWithPiss.ImageGen
        ,BlastItWithPiss.PastaGen
        ,BlastItWithPiss.Video
        ,BlastItWithPiss.Board
        ,BlastItWithPiss.Choice
        ,BlastItWithPiss.MonadChoice
        ,BlastItWithPiss.ProxyReader

        ,GtkBlast.Achievement
        ,GtkBlast.AntigateCaptcha
        ,GtkBlast.BoardSettingsGuiXML
        ,GtkBlast.Captcha
        ,GtkBlast.Conf
        ,GtkBlast.Directory
        ,GtkBlast.Environment
        ,GtkBlast.EnvPart
        ,GtkBlast.EnvParts
        ,GtkBlast.GtkUtils
        ,GtkBlast.JsonUtils
        ,GtkBlast.GuiCaptcha
        ,GtkBlast.Image
        ,GtkBlast.Log
        ,GtkBlast.Mainloop
        ,GtkBlast.MuVar
        ,GtkBlast.Pasta
        ,GtkBlast.Proxy
        ,GtkBlast.ROW_ROW_FIGHT_THE_POWER
        ,GtkBlast.Types
        ,GtkBlast.Video
        ,GtkBlast.Worker

    build-depends:
         base >= 4.5 && < 5
        ,data-default
        ,deepseq
        ,failure
        ,safe
        ,lifted-base

        ,containers

        ,stm >= 2.4
        ,threads >= 0.5

        ,time

        ,filepath
        ,system-filepath
        ,directory
        ,temporary
        ,fsnotify

        ,transformers
        ,monad-control

        ,random
        ,random-shuffle
        ,MonadRandom

        ,bytestring
        ,case-insensitive >= 1 && < 2
        ,text
        ,text-locale-encoding

        -- older gtk2hs doesn't work with TH on wdos
        ,gtk >= 0.12.4
        ,glib

        ,aeson
        ,aeson-pretty

        ,network
        ,http-types
        ,http-conduit >= 1.9.1
        ,http-conduit-browser >= 1.8.2
        ,antigate >= 0.6 && < 0.7
        ,conduit
        ,resourcet

        ,certificate >= 1.3.1
        ,mime-types >= 0.1.0.2
        ,socks == 0.5.1

        ,fast-tagsoup-utf8-only >= 1.0.4
        ,tagsoup

    if flag(old-directory)
        build-depends: old-time

    if flag(bindist)
        cpp-options: -DBINDIST
        build-depends: executable-path
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    hs-source-dirs: src

    default-extensions:
         NoImplicitPrelude
        ,CPP
        ,OverloadedStrings
        ,RecordWildCards
        ,NamedFieldPuns
        ,ScopedTypeVariables
        ,FlexibleContexts
        ,DeriveDataTypeable
        ,PackageImports
        ,BangPatterns
        ,ConstraintKinds

    other-extensions:
         UndecidableInstances
        ,FlexibleInstances

executable proxychecker
    main-is: CheckProxyMain.hs

    other-modules:
         Import

        ,BlastItWithPiss.Blast
        ,BlastItWithPiss.Post
        ,BlastItWithPiss.Captcha
        ,BlastItWithPiss.Parsing
        ,BlastItWithPiss.Escaping
        ,BlastItWithPiss.Image
        ,BlastItWithPiss.ImageGen
        ,BlastItWithPiss.PastaGen
        ,BlastItWithPiss.Video
        ,BlastItWithPiss.Board
        ,BlastItWithPiss.Choice
        ,BlastItWithPiss.MonadChoice
        ,BlastItWithPiss.ProxyReader

    build-depends:
         base >= 4.5 && < 5
        ,cmdargs
        ,network
        ,time
        ,transformers
        ,monad-control
        ,lifted-base
        ,bytestring
        ,text
        ,text-locale-encoding
        ,safe
        ,deepseq
        ,failure
        ,data-default
        ,stm >= 2.4
        ,random
        ,containers
        ,filepath
        ,system-filepath
        ,directory
        ,MonadRandom
        ,random-shuffle
        ,http-conduit >= 1.9.1
        ,http-conduit-browser >= 1.8.2
        ,certificate >= 1.3.1
        ,conduit
        ,http-types
        ,mime-types >= 0.1.0.2
        ,socks == 0.5.1
        ,resourcet
        ,case-insensitive >= 1 && < 2
        ,tagsoup
        ,fast-tagsoup-utf8-only >= 1.0.4
        ,antigate >= 0.6 && < 0.7
        ,stm-conduit >= 2
        ,stm-chans >= 2

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    hs-source-dirs: src

    default-extensions:
         NoImplicitPrelude
        ,CPP
        ,OverloadedStrings
        ,RecordWildCards
        ,NamedFieldPuns
        ,ScopedTypeVariables
        ,FlexibleContexts
        ,DeriveDataTypeable
        ,PackageImports
        ,BangPatterns
        ,ConstraintKinds

    other-extensions:
         ExistentialQuantification
        ,MultiParamTypeClasses
        ,FunctionalDependencies
        ,FlexibleInstances
        ,TypeSynonymInstances

executable smyvalka
    main-is: SmyvalkaMain.hs

    other-modules:
         Import

        ,BlastItWithPiss.Blast
        ,BlastItWithPiss.Post
        ,BlastItWithPiss.Captcha
        ,BlastItWithPiss.Parsing
        ,BlastItWithPiss.Escaping
        ,BlastItWithPiss.Image
        ,BlastItWithPiss.ImageGen
        ,BlastItWithPiss.PastaGen
        ,BlastItWithPiss.Video
        ,BlastItWithPiss.Board
        ,BlastItWithPiss.Choice
        ,BlastItWithPiss.MonadChoice
        ,BlastItWithPiss.ProxyReader

    build-depends:
         base >= 4.5 && < 5
        ,cmdargs
        ,network
        ,time
        ,transformers
        ,monad-control
        ,lifted-base
        ,bytestring
        ,text
        ,text-locale-encoding
        ,safe
        ,deepseq
        ,failure
        ,data-default
        ,stm >= 2.4
        ,random
        ,containers
        ,filepath
        ,system-filepath
        ,directory
        ,MonadRandom
        ,random-shuffle
        ,http-conduit >= 1.9.1
        ,http-conduit-browser >= 1.8.2
        ,certificate >= 1.3.1
        ,conduit
        ,http-types
        ,mime-types >= 0.1.0.2
        ,socks == 0.5.1
        ,resourcet
        ,case-insensitive >= 1 && < 2
        ,tagsoup
        ,fast-tagsoup-utf8-only >= 1.0.4
        ,antigate >= 0.6 && < 0.7

    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if !os(windows)
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    hs-source-dirs: src

    default-extensions:
         NoImplicitPrelude
        ,CPP
        ,OverloadedStrings
        ,RecordWildCards
        ,NamedFieldPuns
        ,ScopedTypeVariables
        ,FlexibleContexts
        ,DeriveDataTypeable
        ,PackageImports
        ,BangPatterns
        ,ConstraintKinds

    other-extensions:
         ExistentialQuantification
        ,MultiParamTypeClasses
        ,FunctionalDependencies
        ,FlexibleInstances
        ,TypeSynonymInstances

--executable cliblast
--    main-is: CliMain.hs
--    build-depends: base >= 4.5 && < 5
--                  ,process
--                  ,network
--                  ,stm
--                  ,bytestring
--                  ,blast-it-with-piss
--
--    if flag(gtkonly)
--        buildable: False
--
--    if flag(bindist)
--        cpp-options: -DBINDIST
--        build-depends: executable-path
--
--    ghc-options: -Wall -threaded
--
--    default-language: Haskell2010
--
--    hs-source-dirs: src
--
--    default-extensions:
--                NoImplicitPrelude
--               ,CPP
--               ,PatternGuards
--               ,OverloadedStrings
--               ,RecordWildCards
--               ,ScopedTypeVariables
--               ,PackageImports
--               ,BangPatterns

-- updater app. Checks and installs updates, then runs gtkblast
executable BlastItWithPiss
    main-is: UpdaterMain.hs

    other-modules:
         Import
        ,Updater.Manifest
        ,Updater.UnpackZip
        ,Updater.Repair
        ,Updater.DownloadWithMD5
        ,Updater.GuiXML

    build-depends:
         base
        ,lifted-base
        ,safe
        ,process
        ,gtk
        ,filepath
        ,system-filepath
        ,directory
        ,deepseq
        ,failure
        ,containers
        ,time
        ,bytestring
        ,text
        ,text-locale-encoding
        ,transformers
        ,monad-control
        ,data-default
        ,executable-path
        ,network
        ,http-conduit
        ,zip-archive
        ,aeson
        ,cryptohash
        ,crypto-api
        ,cereal
        ,executable-path
    if flag(gtkonly)
        buildable: False

    if flag(bindist)
        cpp-options: -DBINDIST
        if os(windows)
            ghc-options: -optl-mwindows
        else
            ghc-options: -optl-Wl,-rpath,$ORIGIN

    if flag(test)
        cpp-options: -DTEST

    ghc-options: -Wall -threaded

    default-language: Haskell2010

    hs-source-dirs: src

    default-extensions:
         NoImplicitPrelude
        ,CPP
        ,OverloadedStrings
        ,RecordWildCards
        ,NamedFieldPuns
        ,ScopedTypeVariables
        ,FlexibleContexts
        ,DeriveDataTypeable
        ,BangPatterns
        ,ConstraintKinds
